--- a/lee/index.html
+++ b/lee/index.html
@@ -295,7 +295,7 @@
         function changeBanner() {
             if (aa != 8) {
                 setTimeout(() => {
-                    $('.image1').css('background-image', `url(resource/image/x${aa}.jpg)`);
+                    $('.image1').css('background-image', `url(./resource/image/x${aa}.jpg)`);
                     aa++
                     changeBanner();
                     addAnimation();
@@ -303,7 +303,7 @@
             } else {
                 aa = 1;
                 setTimeout(() => {
-                    $('.image1').css('background-image', `url(resource/image/x${aa}.jpg)`);
+                    $('.image1').css('background-image', `url(./resource/image/x${aa}.jpg)`);
                     aa++
                     changeBanner();
                     addAnimation();
@@ -314,7 +314,7 @@
         function changeBanner2() {
             if (bb != 8) {
                 setTimeout(() => {
-                    $('.image2').css('background-image', `url(resource/image/x${bb}.jpg)`);
+                    $('.image2').css('background-image', `url(./resource/image/x${bb}.jpg)`);
                     bb++
                     changeBanner2();
                     removeAnimation();
@@ -322,7 +322,7 @@
             } else {
                 bb = 1;
                 setTimeout(() => {
-                    $('.image2').css('background-image', `url(resource/image/x${bb}.jpg)`);
+                    $('.image2').css('background-image', `url(./resource/image/x${bb}.jpg)`);
                     bb++
                     changeBanner2();
                     removeAnimation();
