--- a/lee/index.html
+++ b/lee/index.html
@@ -116,7 +116,7 @@
             background: #999;
             background-size: cover;
             position: center center;
-            background-image: url(../resource/image/x1.jpg);
+            background-image: url(./resource/image/x1.jpg);
             position: absolute;
             z-index: 19;
         }
