--- a/monzzle/monster_introduction.html
+++ b/monzzle/monster_introduction.html
@@ -198,11 +198,11 @@
                     $('.introduction-text p').text(res.data[i].design);
                     $('.name').text(res.data[i].name);
                     if (res.data[i].goodorbad == '正面') {
-                        $('.container .box .circle').css('background', 'url(../resource/monster/good.jpg)');
-                        $('.container .box').css('background-image', 'url(../resource/monster/good-bg.jpg)');
+                        $('.container .box .circle').css('background', 'url(./resource/monster/good.jpg)');
+                        $('.container .box').css('background-image', 'url(./resource/monster/good-bg.jpg)');
                     } else {
-                        $('.container .box .circle').css('background', 'url(../resource/monster/bad.jpg)');
-                        $('.container .box').css('background-image', 'url(../resource/monster/bad-bg.jpg)');
+                        $('.container .box .circle').css('background', 'url(./resource/monster/bad.jpg)');
+                        $('.container .box').css('background-image', 'url(./resource/monster/bad-bg.jpg)');
                     }
                 }
             }
