--- a/monzzle/game.html
+++ b/monzzle/game.html
@@ -153,6 +153,36 @@
         <!-- <div id="help"><input type="checkbox" name="enablehelp" onchange="shownumbers();">Enable Help</div> -->
     </section>
 
+    <footer>
+        <div class="footer-left">
+            <a href="index.html">首頁</a>
+            <a href="about.html">關於我們</a>
+            <a href="shop.html">專題介紹</a>
+            <a href="monster.html">妖怪集結</a>
+            <a href="game.html">小遊戲</a>
+        </div>
+
+        <div class="footer-right">
+            <div class="footer-info">
+                <p>學校：</p>
+                <p>國立勤益科技大學</p>
+            </div>
+            <div class="footer-info">
+                <p>系所：</p>
+                <p>文化創意事業系</p>
+            </div>
+            <div class="footer-info">
+                <p>班級：</p>
+                <p>四文四甲</p>
+            </div>
+            <div class="footer-info">
+                <p>聯絡資訊：</p>
+                <p>monzzle01@gmail.com</p>
+            </div>
+        </div>
+    </footer>
+    <div class="copyright">&copy;XV Monzzle</div>
+
     <script src="js/header.js"></script>
     <script src="js/game.js"></script>
     <script src="js/base.js"></script>
