--- a/monzzle/game.html
+++ b/monzzle/game.html
@@ -104,8 +104,8 @@
                     <div class="right-nav" id="turtle">制風龜</div>
                     <div class="right-nav" id="snake">蛇郎君</div>
                     <div class="right-nav" id="cat">山貓</div>
-                    <div class="right-nav" id="stone">豬哥石</div>
-                    <div class="right-nav" id="horse">白馬妖怪</div>
+                    <div class="right-nav" id="pig">豬哥石</div>
+                    <div class="right-nav" id="hourse">白馬妖怪</div>
                     <div class="right-nav" id="dog">天狗</div>
                     <div class="right-nav" id="bird">婆娑鳥</div>
                 </div>
@@ -115,9 +115,9 @@
                     <div class="right-nav" id="fish">人魚</div>
                     <div class="right-nav" id="tiger">虎姑婆</div>
                     <div class="right-nav" id="coin">金銀鬼</div>
-                    <div class="right-nav" id="coin">疫鬼</div>
-                    <div class="right-nav" id="coin">魔神仔</div>
-                    <div class="right-nav" id="coin">麞妖</div>
+                    <div class="right-nav" id="ghost">疫鬼</div>
+                    <div class="right-nav" id="msz">魔神仔</div>
+                    <div class="right-nav" id="zy">麞妖</div>
                 </div>
             </div>
 
