--- a/monzzle3.0/game.html
+++ b/monzzle3.0/game.html
@@ -104,8 +104,8 @@
                     <div class="right-nav" id="turtle">制風龜</div>
                     <div class="right-nav" id="snake">蛇郎君</div>
                     <div class="right-nav" id="cat">山貓</div>
-                    <div class="right-nav" id="stone">豬哥石</div>
-                    <div class="right-nav" id="horse">白馬妖怪</div>
+                    <div class="right-nav" id="pig">豬哥石</div>
+                    <div class="right-nav" id="hourse">白馬妖怪</div>
                     <div class="right-nav" id="dog">天狗</div>
                     <div class="right-nav" id="bird">婆娑鳥</div>
                 </div>
@@ -115,9 +115,9 @@
                     <div class="right-nav" id="fish">人魚</div>
                     <div class="right-nav" id="tiger">虎姑婆</div>
                     <div class="right-nav" id="coin">金銀鬼</div>
-                    <div class="right-nav" id="coin">疫鬼</div>
-                    <div class="right-nav" id="coin">魔神仔</div>
-                    <div class="right-nav" id="coin">麞妖</div>
+                    <div class="right-nav" id="ghost">疫鬼</div>
+                    <div class="right-nav" id="msz">魔神仔</div>
+                    <div class="right-nav" id="zy">麞妖</div>
                 </div>
             </div>
 
@@ -152,6 +152,36 @@
         </div>
         <!-- <div id="help"><input type="checkbox" name="enablehelp" onchange="shownumbers();">Enable Help</div> -->
     </section>
+
+    <footer>
+        <div class="footer-left">
+            <a href="index.html">首頁</a>
+            <a href="about.html">關於我們</a>
+            <a href="shop.html">專題介紹</a>
+            <a href="monster.html">妖怪集結</a>
+            <a href="game.html">小遊戲</a>
+        </div>
+
+        <div class="footer-right">
+            <div class="footer-info">
+                <p>學校：</p>
+                <p>國立勤益科技大學</p>
+            </div>
+            <div class="footer-info">
+                <p>系所：</p>
+                <p>文化創意事業系</p>
+            </div>
+            <div class="footer-info">
+                <p>班級：</p>
+                <p>四文四甲</p>
+            </div>
+            <div class="footer-info">
+                <p>聯絡資訊：</p>
+                <p>monzzle01@gmail.com</p>
+            </div>
+        </div>
+    </footer>
+    <div class="copyright">&copy;XV Monzzle</div>
 
     <script src="js/header.js"></script>
     <script src="js/game.js"></script>
