--- a/monzzle/game.html
+++ b/monzzle/game.html
@@ -140,7 +140,21 @@
         </a>
     </section>
 
+    <section class="finished">
+        <div class="finished-content">
+            <div>
+                <h1>完成拼圖</h1>
+                <p>時間：</p>
+                <div class="okay">確認</div>
+            </div>
+        </div>
+    </section>
+
     <!-- <div id="frame"></div> -->
+    <div class="timer">
+        <p id="start">Time: 0m 0s</p>
+        <p id="finish"></p>
+    </div>
     <section class="s-game">
         <div id="game">
             <li class="tile" id="1"><span class="number">1</span></li>
