--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -53,9 +53,9 @@
                 <!-- <div class="nav nav-6">
                     <a href="shop.html">商城</a>
                 </div> -->
-                <div class="nav nav-7">
+                <!-- <div class="nav nav-7">
                     <a href="https://forms.gle/kMiLRcYRwtMoGGTeA">預購單</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="menu-right">
