--- a/monzzle3.0/subject.html
+++ b/monzzle3.0/subject.html
@@ -53,9 +53,9 @@
                 <!-- <div class="nav nav-6">
                     <a href="shop.html">商城</a>
                 </div> -->
-                <div class="nav nav-7">
+                <!-- <div class="nav nav-7">
                     <a href="https://forms.gle/kMiLRcYRwtMoGGTeA">預購單</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="menu-right">
@@ -467,7 +467,7 @@
             <a href="shop.html">專題介紹</a>
             <a href="monster.html">妖怪集結</a>
             <a href="game.html">小遊戲</a>
-            <a href="https://forms.gle/kMiLRcYRwtMoGGTeA">預購單</a>
+            <!-- <a href="https://forms.gle/kMiLRcYRwtMoGGTeA">預購單</a> -->
         </div>
 
         <div class="footer-right">
